--- a/Engine/ColorVision.Engine/Archive/BatchShowPage.xaml
+++ b/Engine/ColorVision.Engine/Archive/BatchShowPage.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="ColorVision.Engine.DataHistory.Dao.BatchDataHistory"
+﻿<Page x:Class="ColorVision.Engine.Archive.Dao.BatchDataHistory"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:ColorVision.Engine.DataHistory.Dao"
+      xmlns:local="clr-namespace:ColorVision.Engine.Archive.Dao"
       xmlns:properties ="clr-namespace:ColorVision.Engine.Properties"
       xmlns:camera ="clr-namespace:ColorVision.Engine.Services.Dao"
       xmlns:algorithm ="clr-namespace:ColorVision.Engine.Services.Devices.Algorithm.Views"
