--- a/Engine/ColorVision.Engine/Archive/ArchivePage.xaml
+++ b/Engine/ColorVision.Engine/Archive/ArchivePage.xaml
@@ -1,11 +1,11 @@
-﻿<Page x:Class="ColorVision.Engine.DataHistory.Dao.DataSummaryPage"
+﻿<Page x:Class="ColorVision.Engine.Archive.Dao.ArchivePage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ColorVision.Engine.DataHistory.Dao"
+             xmlns:local="clr-namespace:ColorVision.Engine.Archive.Dao"
              mc:Ignorable="d" 
-             Title="综合查询"  d:DesignHeight="450" d:DesignWidth="800" Loaded="Page_Loaded" Initialized="UserControl_Initialized">
+             Title="归档查询"  d:DesignHeight="450" d:DesignWidth="800" Loaded="Page_Loaded" Initialized="UserControl_Initialized">
     <Page.Resources>
         <Style TargetType="TextBlock" >
             <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}" />
@@ -21,7 +21,8 @@
             </Grid.RowDefinitions>
             <Grid>
                 <DockPanel Margin="5" >
-                    <Button  Content="全部归档" DockPanel.Dock="Right" Click="Save_Click" Margin="10,0"/>
+                    <Button  Content="保存到本地" DockPanel.Dock="Right" Click="Save_Click" Margin="10,0"/>
+                    <Button  Content="设置" DockPanel.Dock="Right" Click="Setting_Click" Margin="10,0"/>
                     <Button  Content="搜索" DockPanel.Dock="Right" Click="Query_Click" Margin="10,0"/>
                     <TextBox x:Name="SearchBox" BorderBrush="{DynamicResource PrimaryBrush}" BorderThickness="0"  VerticalContentAlignment="Center"  VerticalAlignment="Center" Text="" TextChanged="SearchBox_TextChanged"  InputMethod.IsInputMethodEnabled="True"  KeyDown="KeyEnter"  />
                 </DockPanel>
@@ -39,43 +40,47 @@
                                     <Setter Property="Visibility" Value="Visible"/>
                                     <Setter Property="Background" Value="Transparent"/>
                                     <Setter Property="BorderThickness" Value="0"/>
-                                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
                                     <Setter Property="ContextMenu" Value="{StaticResource ItemContextMenu}" />
                                     <EventSetter Event="Click" Handler="GridViewColumnSort"/>
                                 </Style>
                             </GridView.ColumnHeaderContainerStyle>
-                            <GridViewColumn  Header="序号" >
+                            <GridViewColumn  Header="Code">
                                 <GridViewColumn.CellTemplate>
-                                    <DataTemplate  DataType="{x:Type local:ViewBatchResult}"  >
-                                        <TextBlock Text="{Binding Id}"/>
+                                    <DataTemplate DataType="{x:Type local:ArchivedMasterModel}"  >
+                                        <TextBlock Text="{Binding Code}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn  Header="批次号">
+
+                            <GridViewColumn  Header="名称">
                                 <GridViewColumn.CellTemplate>
-                                    <DataTemplate  DataType="{x:Type local:ViewBatchResult}"  >
-                                        <TextBlock Text="{Binding Batch}"/>
+                                    <DataTemplate DataType="{x:Type local:ArchivedMasterModel}"  >
+                                        <TextBlock Text="{Binding Name}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn  Header="BatchCode">
+
+
+                            <GridViewColumn  Header="Data">
                                 <GridViewColumn.CellTemplate>
-                                    <DataTemplate  DataType="{x:Type local:ViewBatchResult}"  >
-                                        <TextBlock Text="{Binding BatchCode}"/>
+                                    <DataTemplate DataType="{x:Type local:ArchivedMasterModel}"  >
+                                        <TextBlock Text="{Binding Data}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn  Header="测量时间">
+
+                            <GridViewColumn  Header="归档日期">
                                 <GridViewColumn.CellTemplate>
-                                    <DataTemplate DataType="{x:Type local:ViewBatchResult}"  >
-                                        <TextBlock Text="{Binding CreateTime}"/>
+                                    <DataTemplate DataType="{x:Type local:ArchivedMasterModel}"  >
+                                        <TextBlock Text="{Binding ArchDate}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
-                            <GridViewColumn  Header="TotalTime">
+
+                            <GridViewColumn  Header="创建日期">
                                 <GridViewColumn.CellTemplate>
-                                    <DataTemplate DataType="{x:Type local:ViewBatchResult}"  >
-                                        <TextBlock Text="{Binding TotalTime}"/>
+                                    <DataTemplate DataType="{x:Type local:ArchivedMasterModel}"  >
+                                        <TextBlock Text="{Binding CreateDate}"/>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
@@ -83,8 +88,7 @@
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate DataType="{x:Type local:ViewBatchResult}">
                                         <Grid>
-                                            <TextBlock Text="{Binding ArchiveStatus}" Visibility="{Binding IshowArch,Converter={StaticResource bool2VisibilityConverter1}}"/>
-                                            <Button Content="归档" Click="Arch_Click" Visibility="{Binding IshowArch,Converter={StaticResource bool2VisibilityConverter}}" Tag="{Binding .}"/>
+                                            <Button Content="保存" Click="Save_Click"  Tag="{Binding .}"/>
                                         </Grid>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
