--- a/Engine/ColorVision.Engine/Archive/HomePage.xaml
+++ b/Engine/ColorVision.Engine/Archive/HomePage.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="ColorVision.Engine.DataHistory.HomePage"
+﻿<Page x:Class="ColorVision.Engine.Archive.HomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:ColorVision.Engine.DataHistory"
+      xmlns:local="clr-namespace:ColorVision.Engine.Archive"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="HomePage" Loaded="Page_Loaded" Initialized="Page_Initialized">
