--- a/ColorVision/Update/ChangeLog/ChangelogWindow.xaml
+++ b/ColorVision/Update/ChangeLog/ChangelogWindow.xaml
@@ -45,7 +45,8 @@
 
             </Grid>
             <StackPanel Grid.Column="1" Margin="5,5,10,5" HorizontalAlignment="Right" Orientation="Horizontal">
-                <Button Content="打开" Command="{Binding OpenInExplorerCommand}"  Margin="0,0,5,0" />
+                <Button Content="打开" Command="{Binding OpenInWeview2Command}"  Margin="0,0,5,0" />
+                <Button Content="系统默认打开" Command="{Binding OpenInExplorerCommand}"  Margin="0,0,5,0" />
                 <Button  Command="{Binding EditCommand}" Padding="2" Height="27" Width="27" >
                     <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" RenderTransformOrigin="0.5,0.5"  FontSize="20" Foreground="{DynamicResource GlobalTextBrush}">
                         <TextBlock.RenderTransform>
