--- a/Engine/ColorVision.Engine/MySql/MySqlToolWindow.xaml
+++ b/Engine/ColorVision.Engine/MySql/MySqlToolWindow.xaml
@@ -25,7 +25,7 @@
         </Grid.RowDefinitions>
         <StackPanel Margin="0,0,0,5">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="{Binding ImagePath}"/>
+                <TextBlock Text="{Binding Config.ImagePath}"/>
             </StackPanel>
         </StackPanel>
 
