--- a/Engine/ColorVision.Engine/Templates/Jsons/AAFindPoints/DisplayAAFindPoints.xaml
+++ b/Engine/ColorVision.Engine/Templates/Jsons/AAFindPoints/DisplayAAFindPoints.xaml
@@ -12,7 +12,7 @@
         <StackPanel>
             <DockPanel Margin="0,2">
                 <Button  Content="{x:Static properties:Resources.Calculate}" DockPanel.Dock="Right"  HorizontalAlignment="Right" Click="RunTemplate_Click" />
-                <TextBlock Text="AA" Width="60"/>
+                <TextBlock Text="FindLightArea" Width="100"/>
                 <ComboBox x:Name="ComboxTemplate"  SelectedIndex="{Binding TemplateSelectedIndex}" Width="130" HorizontalAlignment="Left" Style="{StaticResource ComboBox.Small}" SelectedValuePath="Value" DisplayMemberPath="Key" />
                 <Grid Width="20" Margin="5,0" HorizontalAlignment="Left">
                     <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="15" Foreground="{DynamicResource GlobalTextBrush}"/>
