--- a/UI/ColorVision.SocketProtocol/SocketManagerWindow.xaml
+++ b/UI/ColorVision.SocketProtocol/SocketManagerWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ColorVision.UI.SocketProtocol.SocketManagerWindow"
+﻿<Window x:Class="ColorVision.SocketProtocol.SocketManagerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.UI.SocketProtocol"
+        xmlns:local="clr-namespace:ColorVision.SocketProtocol"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:SocketManager}"
         Title="SocketManagerWindow" Height="450" Width="800" Initialized="Window_Initialized">
